webpack/assets/javascripts/react_app/components/Layout/layout.scss
@import '../../common/colors.scss';
@import '../../common/variables.scss';

.react-page #foreman-main-container {
  overflow-x: auto;
  white-space: normal;
  height: 100%;
}
#foreman-main-container {
  height: fit-content;
}

.collapsed-nav {
  #react-app-root {
    main.pf-c-page__main {
      padding-left: 0;
    }
  }
  #rails-app-content {
    margin-left: 0;
  }
}

#page-sidebar {
  .pf-c-nav__item.hidden-nav-lg {
    display: none;

    @media (max-width: $header-max-width) {
      display: block;
    }
  }
}

.pf-c-nav {
  .nav-title-icon {
    pointer-events: none;
    padding-right: 10px;
  }
  .nav-title {
    pointer-events: none;
  }
  .pf-c-nav__item .pf-c-nav__item.pf-m-expandable .pf-c-nav__list::before {
    border: 0;
  }
  .pf-c-nav__item.pf-m-expandable::before {
    z-index: var(--pf-c-page__sidebar--ZIndex);
  }
  .pf-c-nav__item .pf-c-nav__item.pf-m-expandable::before {
    // in small screens, the expandable items have css to add a second border
    border-bottom: none;
  }
  
  .pf-m-expandable>.pf-c-nav__link{
    text-align: left;
  }

  .navigation-search-menu {
    .pf-c-menu__item {
      padding: 5px;
      .pf-c-menu__item-description {
        word-break: break-word;
      }
    }
    min-width: 0;
    margin: 0;
    --pf-c-menu__list-item--hover--BackgroundColor: var(
      --pf-global--BackgroundColor--200
    );
    --pf-c-menu--BackgroundColor: var(--pf-global--BackgroundColor--100);
    --pf-c-menu__list-item--Color: var(--pf-global--Color--100);
    --pf-c-menu__list-item--BackgroundColor: transparent;
    --pf-c-menu__list-item--hover--BackgroundColor: var(
      --pf-global--BackgroundColor--200
    );
    --pf-c-menu__list-item--focus-within--Color: var(--pf-global--palette--blue-400);
    --pf-c-menu__list-item--focus-within--BackgroundColor: var(
      --pf-global--BackgroundColor--200
    );

    --pf-c-menu__item-description--Color: var(--pf-global--Color--200);
    --pf-c-menu__list-item--hover--Color: unset;
  }
  #navigation-search {
    width:calc(#{var(--pf-c-page__sidebar--Width)} - 10px);
    margin-left: 5px;
    .pf-c-button.pf-m-control {
      display: none;
    }
  }
}

.pf-c-page {
  --pf-c-page--BackgroundColor: var(--pf-global--BackgroundColor--100);
}

.pf-c-page .pf-c-masthead {
  background-repeat: no-repeat;
  background-size: cover;

  .pf-c-toolbar__item {
    .pf-c-context-selector__menu {
      top: auto;
    }

    .pf-c-context-selector {
      &.pf-m-expanded,
      &:hover {
        background: rgba(255, 255, 255, 0.24);
      }
    }

    .pf-c-context-selector__toggle::before {
      border-width: 0;
    }
  }
  
}

